<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/myprofile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/myprofile">

    </item>
    <item
        android:id="@+id/Refill"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refill">

    </item>
    <item
        android:id="@+id/yourservice"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/yourservice">

    </item>
    <item
        android:id="@+id/Notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification">

    </item>
    <item
        android:id="@+id/earning"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/earning">

    </item>

    <item
        android:id="@+id/Unpaidrecords"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/Unpaid">

    </item>
    <item
        android:id="@+id/term"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:title="@string/terms">

    </item>
    <item
        android:id="@+id/help_support"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/help_support">

    </item>
    <item
        android:id="@+id/Logout"
        android:icon="@drawable/ic_not_interested_black_24dp"
        android:title="@string/logout">

    </item>
</menu>