<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account" />

    <item
        android:id="@+id/navigation_money"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/money" />

    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/performance"
         />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_unfold_more_black_24dp"
        android:title="@string/more" />

</menu>
